fix(auction-widget): subscribeToAuction logic for private auctions and z-index for modal

--- a/packages/auction-widget/assets/app.css
+++ b/packages/auction-widget/assets/app.css
@@ -23,7 +23,7 @@
     transition-property: opacity;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 300ms;
-    z-index: 99;
+    z-index: 1000;
   }
 
   #auction-widget-box {
@@ -115,7 +115,7 @@
 
   /* Containers */
   .auction-widget-modal {
-    z-index: 100;
+    z-index: 5000;
     position: fixed;
     bottom: 2rem;
     right: 0;
